tests/fixtures/type_checker/pass/arrayref_multi_dimensional.galaxy
typedef int[3][3] CSPlayerField;
typedef arrayref<CSPlayerField> CSPlayerField_T;

int[3][3] enabled;
void fn(CSPlayerField_T playerField) {}

void arrayref_multi_dimensional()
{
    fn(enabled);
}
